   - Fixed percentage calculation bug in vmaildir_readquota
   - Updated lastauth/vlog queries not to trigger failure condition on domain
     deletion in MySQL and PostgreSQL module
   - Updated build scripts to show version 5.4.28
   - Added solution for 5.4.28 to LDAP schema for sn and cn attributes being
     required.  A permanent solution will be added to the 5.5 tree

   aledr <matrixworkstation@gmail.com>
   - Fixed overflow in PostgreSQL module

5.4.27 - Released 16-Jan-2009
	Jeremy Kister, Rick Widmer, Tom Collins
	- Solaris doesn't like setenv

	Michael Johnson, Steve Cole, dhaval, Rick Widmer
	- Another attempt at maildirquota

        Harmut Wernisch, Tom Collins
	- Fix mixed up usage of MYSQL_UPDATE_* and MYSQL_READ_* in vmysql.c:load_connection_info()
	This may need a tracker number attached.  I can't find it.

    Manvendra Bhangui
	- Added authvchkpw module for Courier-IMAP
	- Added backfill patch [2507177]

5.4.26 - Released 3-Nov-2007
	Bill Shupp
	- vpopmaild fix: find_domain should not list 'page 0' when a domain is not
	found.  Instead, return "." only.  Also indicate in help that per_page is 
	optional.  find_domain page numbers consistently start at 1.
	- update README.vpopmaild to reflect the above.
	- Get valias_remove() working for cdb module.

	Rick Widmer
	- Arrange vpopmail.h based on libvpopmail categories
	- Add vlistlib library, vlist program to manage mail lists


5.4.25 - Released 9-Oct-2007
	Rick Widmer, Tom Collins
	- another try at signedness warnings in maildirquota and vchkpw
	- minor change in README.vdelivermail


5.4.24 - Released 29-Sep-2007
	Rick Widmer, Tom Collins
	- fix off_t warnings in maildirquota.c when mysql back end is used.

	John Simpson, Joshua Megerman
	- extend maximum password length


5.4.23 - Released 23-Sep-2007
	Rick Widmer
	- Upgrade build system to match my dev server  (SuSE 10.2)
	- Revert maildirquota warnings change


5.4.22 - Released 15-Sep-2007
        Steve Cole
	- invalid MySQL info in UPGRADE