@@ -19,6 +19,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
    - Updated build scripts to show version 5.4.28
    - Added solution for 5.4.28 to LDAP schema for sn and cn attributes being
      required.  A permanent solution will be added to the 5.5 tree
+   - Fixed vdelivermail to process .qmail files for users with dashes in their
+     usernames when qmail-ext is enabled
 
    aledr <matrixworkstation@gmail.com>
    - Fixed overflow in PostgreSQL module
